# teamplify-runner

./: .gitignore  .travis.yml  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  tests.yaml
teamplify_runner/: __init__.py  cli.py  configurator.py  docker-compose.yml  mysql.cnf  nginx.conf  nginx.tmpl  postfix.cf  utils.py  uwsgi_params  uwsgi_params.conf  vhost.conf
teamplify_runner/backup/: .gitignore  readme.txt
tests/: conf_sample_invalid.ini  conf_sample_valid.ini  on-premises-start-selenium.side  test_cli.py  test_configurator.py  test_startup.py
