[project]
name = "teamplify"
version = "0.13.0"
description = "Teamplify on-premise runner"
readme = "README.md"
license = "MIT"
authors = [{ name = "Teamplify", email = "support@teamplify.com" }]
requires-python = ">=3.9"
dependencies = [
    "certifi>=2022.12.7",
    "click>=5.0",
    "requests>=2.28.2",
    "sarge>=0.1.4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/teamplify/teamplify-runner/"
Repository = "https://github.com/teamplify/teamplify-runner/"

[project.scripts]
teamplify = "teamplify_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "teamplify_runner/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["teamplify_runner"]

[dependency-groups]
dev = [
    "flake8>=3.2.1",
    "flake8-isort>=2.6.0",
    "pytest>=2.9.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short"
markers = ["playwright: Playwright-based tests"]

[tool.flake8]
max-line-length = 100
exclude = [".git", ".venv", "build", "dist", "teamplify.egg-info"]

[tool.isort]
line_length = 100
lines_after_imports = 2
multi_line_output = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
