[project]
name = "teamplify"
# Changing the version automatically publishes to PyPI (see DEVELOPMENT.md)
version = "0.13.0"
description = "Teamplify on-premise runner"
readme = "README.md"
license = "MIT"
authors = [{ name = "Teamplify", email = "support@teamplify.com" }]
requires-python = ">=3.9"
dependencies = [
    "certifi>=2022.12.7",
    "click>=5.0",
    "requests>=2.28.2",
    "sarge>=0.1.4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/teamplify/teamplify-runner/"
Repository = "https://github.com/teamplify/teamplify-runner/"

[project.scripts]
teamplify = "teamplify_runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "teamplify_runner/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["teamplify_runner"]

[dependency-groups]
dev = [
    "pytest>=2.9.0",
    "pytest-playwright==0.7.1",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "--tb=short"
markers = ["playwright: Playwright-based tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true
